--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,27 @@ input[type=submit]:hover {
   clear: both;
 }
 
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .col-25, .col-75, input[type=submit] {
@@ -74,6 +95,17 @@ input[type=submit]:hover {
 
 <div class="container">
   <form action="/", method="post">
+
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+  <div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <strong>Errore!</strong> {{ messages}}
+  </div>
+    {% endif %}
+  {% endwith %}
+
+
   <div class="row">
     <div class="col-25">
       <label for="fname">x label</label>
