--- a/templates/index.html
+++ b/templates/index.html
@@ -79,26 +79,17 @@ input[type=submit]:hover {
   color: black;
 }
 
-/* Start by hiding the checkboxes*/
 input[type=checkbox] {
   visibility: hidden;
 }
-
-input[type="checkbox"]:checked {
-  some code goes here
-}
-
-/* the slider bar */
 .checkbox-example {
   width: 45px;
   height: 15px;
   background: #555;
-  margin: 20px 80px;
+  margin: 20px 10px;
   position: relative;
   border-radius: 5px;
 }
-
-/* the slider from the label */
 .checkbox-example label {
   display: block;
   width: 18px;
@@ -111,9 +102,7 @@ input[type="checkbox"]:checked {
   left: -3px;
   background: #ccc;
 }
-
-/* Move the slider if the checkbox is clicked */
-.checkbox-example input[type=checkbox]:checked+label {
+.checkbox-example input[type=checkbox]:checked + label {
   left: 27px;
 }
 
@@ -151,15 +140,16 @@ input[type="checkbox"]:checked {
       <label for="fname">x label</label>
     </div>
     <div class="col-75">
-      <input type="text" id="fname" name="x_label" placeholder="x axis">
+      <input type="text" id="fname" name="x_label" value="distanza [m]">
     </div>
   </div>
+
   <div class="row">
     <div class="col-25">
       <label for="lname">y label</label>
     </div>
     <div class="col-75">
-      <input type="text" id="lname" name="y_label" placeholder="y axis">
+      <input type="text" id="lname" name="y_label" value="temperatura [C]">
     </div>
   </div>
 
@@ -168,7 +158,9 @@ input[type="checkbox"]:checked {
       <label for="subject">x data</label>
     </div>
     <div class="col-75">
-      <textarea id="subject" name="x_data" placeholder="[1,2,8]" style="height:100px"></textarea>
+      <textarea id="subject" name="x_data" placeholder="[0, 29.98,61.46 ,91.96 ,123.48,152.85,183.15,211.1,241.92, 273.24 ,305.74 ,336.16 ,366.58 ,397.53 ,429.2 ]" style="height:100px">
+[0, 29.98,61.46 ,91.96 ,123.48,152.85,183.15,211.1,241.92, 273.24 ,305.74 ,336.16 ,366.58 ,397.53 ,429.2 ]
+      </textarea>
     </div>
   </div>
   
@@ -177,7 +169,9 @@ input[type="checkbox"]:checked {
       <label for="subject">y data</label>
     </div>
     <div class="col-75">
-      <textarea id="subject" name="y_data" placeholder="[1,2,8]" style="height:100px"></textarea>
+      <textarea id="subject" name="y_data" placeholder="[42.17633333333334, 39.186, 38.23716666666667, 36.562999999999995, 35.181999999999995, 34.076333333333324, 32.92516666666666, 31.199999999999992, 29.58316666666667, 28.447166666666664, 27.135333333333335, 25.734166666666678, 24.246166666666667, 22.839333333333332, 21.38883333333333]" style="height:100px">
+[42.17633333333334, 39.186, 38.23716666666667, 36.562999999999995, 35.181999999999995, 34.076333333333324, 32.92516666666666, 31.199999999999992, 29.58316666666667, 28.447166666666664, 27.135333333333335, 25.734166666666678, 24.246166666666667, 22.839333333333332, 21.38883333333333]
+      </textarea>
     </div>
   </div>
 
@@ -186,8 +180,8 @@ input[type="checkbox"]:checked {
     <div class="col-25">
       <label for="subject">Incertezze</label>
       <div class="checkbox-example">
-        <input type="checkbox" value="1" name="uncert_checkbox" checked="True" id="checkboxOneInput" onclick="showUncertaintiesbox()"/>
-        <label for="checkboxOneInput"></label>
+        <input type="checkbox" value="1" name="uncert_checkbox" id="uncert_checkbox" checked="True" onclick="showUncertaintiesbox()"/>
+        <label for="uncert_checkbox"></label>
       </div>
     </div>
   </div>
@@ -198,7 +192,9 @@ input[type="checkbox"]:checked {
         <label for="subject">sigma x</label>
       </div>
       <div class="col-75">
-        <textarea id="subject" name="sigma_x" placeholder="[1,2,8]" style="height:100px"></textarea>
+        <textarea id="subject" name="sigma_x" placeholder="[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]" style="height:100px">
+[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+        </textarea>
       </div>
     </div>
 
@@ -207,7 +203,19 @@ input[type="checkbox"]:checked {
         <label for="subject">sigma y</label>
       </div>
       <div class="col-75">
-        <textarea id="subject" name="sigma_y" placeholder="[1,2,8]" style="height:100px"></textarea>
+        <textarea id="subject" name="sigma_y" placeholder="[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]" style="height:100px">
+[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+        </textarea>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-25">
+      <label for="subject">Residui</label>
+      <div class="checkbox-example">
+        <input type="checkbox" value="1" name="residuals_checkbox" id="residuals_checkbox" checked="True"/>
+        <label for="residuals_checkbox"></label>
       </div>
     </div>
   </div>
@@ -230,7 +238,12 @@ input[type="checkbox"]:checked {
   </form>
 </div>
 
-<img src="static/plot.png" alt="plot">
+{% if image %}
+<img src="{{ url_for('static', filename=image) }}" alt="Risultato" style="width:50%">
+{% endif %}
+
+<!--<img src="static/plot.png" alt="plot">-->
+
 {% for o in out %}
 <p>{{ o }}</p>
 {% endfor %}
