--- a/templates/index.html
+++ b/templates/index.html
@@ -245,8 +245,10 @@ input[type=checkbox] {
     </div>
     <div class="col-75">
       <select id="country" name="modello">
+        <option value="retta">retta: y = ax+b</option>
         <option value="parabola">parabola: y = ax^2+bx+c</option>
         <option value="sinusoide">sinusoide: y = a sin(bx+c)</option>
+        <option value="esponenziale">esponenziale: y = a e^(bx)</option>
       </select>
     </div>
   </div>
