--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@ input[type=checkbox] {
     <div class="col-25">
       <label for="subject">Legenda</label>
       <div class="checkbox-example">
-        <input type="checkbox" value="1" name="legend_checkbox" id="legend_checkbox" checked="True" onclick="showUncertaintiesbox()"/>
+        <input type="checkbox" value="1" name="legend_checkbox" id="legend_checkbox" checked="True" onclick="showLegendbox()"/>
         <label for="legend_checkbox"></label>
       </div>
     </div>
